--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Form Shadow</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/formshadow.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="form-container">
@@ -38,6 +38,6 @@
             </div>
         </form>
     </div>
-    <script src="/js/formshadow.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
